<resources>
    <string name="app_name" translatable="false">MT</string>
    <string name="multiple_tasks" translatable="false">Multiple Tasks</string>
    <string name="m_t" translatable="false">M T</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">PassWord</string>
    <string name="enter">Enter</string>
    <string name="enter_default_data_to_continue">Enter default data to continue</string>
    <string name="retrofit_jeson" translatable="false">Retrofit - Jeson</string>
    <string name="enter_website_name">Enter website name</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_your_text">Enter your text</string>
    <string name="bmi_calculator" translatable="false">BMI Calculator</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="media_files">Media Files</string>
    <string name="learn_numbers">Learn Numbers</string>
    <string name="room_local_sqlite" translatable="false">Room - Local - Sqlite</string>
    <string name="stop_watch">Stop Watch</string>
    <string name="view_picture">View Picture</string>
    <string name="view_video">View Video</string>
    <string name="open_file">Open File</string>
    <string name="start" translatable="false">Start</string>
    <string name="resete" translatable="false">Resete</string>
    <string name="add">Add</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="enter_your_name">Enter your Name</string>
</resources>