<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@color/grayligt"
    tools:context=".Activity.UsersActivity">
    <TextView
        android:id="@+id/txtName2"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_margin="10dp"
        android:background="@drawable/back_groud_part"
        android:gravity="center"
        android:text="@string/room_local_sqlite"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="36dp"
        android:inputType="text"
        android:text="@string/add"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/btn1_a1"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextViewEdits" />

    <EditText
        android:id="@+id/edt_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/enter_your_message"
        android:textColorHint="@color/darkgray"
        android:inputType="text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_Add"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_ShowData"
        android:layout_width="381dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_background2"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/edt_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName2"
        tools:listitem="@layout/list_item_2" />

    <EditText

        android:id="@+id/edt_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_your_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textColorHint="@color/darkgray"
        android:background="@drawable/edit_text_background"
        app:layout_constraintBottom_toTopOf="@+id/edt_message"
        app:layout_constraintEnd_toStartOf="@+id/btn_Add"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/rv_ShowData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rv_ShowData"
        app:layout_constraintTop_toTopOf="@+id/rv_ShowData" />
</androidx.constraintlayout.widget.ConstraintLayout>