<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@drawable/back_groud"
    tools:context=".Activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:rotationX="46"
            android:text="@string/multiple_tasks"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="60dp"
                    android:gravity="center"
                    android:rotationX="46"
                    android:text="@string/m_t"
                    android:textColor="@color/gray"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/TxtName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/darkgray" />

                <EditText
                    android:id="@+id/TxtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textColorHint="@color/darkgray" />

                <EditText
                    android:id="@+id/TxtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/darkgray" />

                <EditText
                    android:id="@+id/TxtPassWord"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="20dp"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/darkgray" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imagelogo"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:rotationX="25"
                android:visibility="gone"
                app:srcCompat="@drawable/icon" />
        </FrameLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnCleanup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:onClick="onclick"
            app:maxImageSize="50dp"
            app:srcCompat="@android:drawable/ic_menu_delete" />


        <Button
            android:id="@+id/btnEnter"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn1_a1"
            android:enabled="false"
            android:inputType="text"
            android:onClick="onclick"
            android:text="@string/enter"
            android:textColor="@color/btn1_a1_text"
            android:textSize="30sp"
            tools:ignore="TextViewEdits" />

        <TextView
            android:id="@+id/txtNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/enter_default_data_to_continue"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <SeekBar
            android:id="@+id/SeekBarSound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />

        <LinearLayout
            android:id="@+id/LayOudio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="invisible"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvPlaye"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:gravity="start"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvDur"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/white" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnPlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:onClick="onclick"
                app:maxImageSize="40dp"
                app:srcCompat="@android:drawable/ic_media_play" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnPause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:clickable="true"
                android:onClick="onclick"
                app:maxImageSize="40dp"
                app:srcCompat="@android:drawable/ic_media_pause" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnStop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:onClick="onclick"
                app:maxImageSize="30dp"
                app:srcCompat="@android:drawable/picture_frame" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>


    </LinearLayout>


</ScrollView>