<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@color/grayligt"
    tools:context=".Activity.ShowFileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/back_groud_part"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ImageView"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:visibility="gone" />

            <VideoView
                android:id="@+id/VideoView"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@+id/btnChooseImage"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn1_a1"
            android:inputType="text"
            android:onClick="onclick"
            android:text="@string/view_picture"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TextViewEdits" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnCam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="8"
                android:clickable="true"
                android:onClick="onclick"
                app:maxImageSize="50dp"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <Button
                android:id="@+id/btnChooseVideo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:background="@drawable/btn1_a1"
                android:inputType="text"
                android:onClick="onclick"
                android:text="@string/view_video"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="TextViewEdits" />
        </LinearLayout>

        <Button
            android:id="@+id/btnChooseAny"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn1_a1"
            android:inputType="text"
            android:onClick="onclick"
            android:text="@string/open_file"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TextViewEdits" />
    </LinearLayout>

</ScrollView>